--- a/homepage/index.html
+++ b/homepage/index.html
@@ -6,16 +6,18 @@
   <title>Dental+</title>
   <link rel="stylesheet" href="homestyle.css">
     <link rel="icon" type="image/png" href="src/tooth.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+<!-- copy this buttom part kapag gusto nyo same background picture -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
   <!-- Navbar -->
 <header>
+    <!-- full copy of header for nav bar hamburger -->
   <nav class="navbar">
     <div class="logo">
       <img src="src/dentist.gif" alt="Logo">
       <h2>Dental<span>+</span></h2>
-    </div>
+    </div> 
 
     <!-- Hamburger Button -->
     <div class="menu-toggle" id="menu-toggle">
