--- a/homepage/index.html
+++ b/homepage/index.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
-    <!-- testing1 -->
+    <!-- testing1a -->
   <!-- Navbar -->
 <header>
     <!-- full copy of header for nav bar hamburger -->
