Debugged and changes in  appointment pages.

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,41 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dental+</title>
   <link rel="stylesheet" href="homestyle.css">
-    <link rel="icon" type="image/png" href="src/tooth.png">
-<!-- copy this buttom part kapag gusto nyo same background picture -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
   <!-- Navbar -->
-<header>
-    <!-- full copy of header for nav bar hamburger -->
-  <nav class="navbar">
-    <div class="logo">
-      <img src="src/dentist.gif" alt="Logo">
-      <h2>Dental<span>+</span></h2>
-    </div> 
-
-    <!-- Hamburger Button -->
-    <div class="menu-toggle" id="menu-toggle">
-      <i class="fa-solid fa-bars"></i>
-    </div>
-
-    <ul class="nav-links" id="nav-links">
-      <li><a href="#" class="active">Home</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul>
-
-    <div class="nav-right">
-      <a href="tel:+1234567891" class="phone">
-        <i class="fa-solid fa-phone"></i> 1234-567-891
-      </a>
-      <a href="#" class="btn">Book Appointment</a>
-    </div>
-  </nav>
-</header>
-
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <img src="src/dentist.gif" alt="Logo">
+        <h2>Dental<span>+</span></h2>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+      <div class="nav-right">
+        <a href="tel:+1234567891" class="phone"><i class="fa-solid fa-phone"></i> 1234-567-891</a>
+        <a href="#" class="btn">Book Appointment</a>
+      </div>
+    </nav>
+  </header>
 
   <!-- Hero Section -->
   <section class="hero">
@@ -67,10 +54,9 @@
   <section class="testimonials">
     <h2>What Our Patients Say</h2>
     <div class="testimonial-container">
-
       <div class="testimonial">
         <i class="fa-solid fa-quote-left"></i>
-        <img src="src/woman.png" alt="Patient">
+        <img src="src/woman2.png" alt="Patient">
         <p>"The staff were incredibly kind and professional! I felt comfortable and confident throughout my visit."</p>
         <div class="stars">
           <i class="fa-solid fa-star"></i>
@@ -81,7 +67,6 @@
         </div>
         <h4>- Sarah L.</h4>
       </div>
-
       <div class="testimonial">
         <i class="fa-solid fa-quote-left"></i>
         <img src="src/man.png" alt="Patient">
@@ -95,10 +80,9 @@
         </div>
         <h4>- James P.</h4>
       </div>
-
       <div class="testimonial">
         <i class="fa-solid fa-quote-left"></i>
-        <img src="src/woman2.png" alt="Patient">
+        <img src="src/woman.png" alt="Patient">
         <p>"I used to be scared of the dentist, but now I actually look forward to my appointments here. They truly care."</p>
         <div class="stars">
           <i class="fa-solid fa-star"></i>
@@ -117,8 +101,10 @@
     <div class="footer-container">
       <div class="footer-about">
         <h3>Dental<span>+</span></h3>
+        
         <p>Your trusted dental partner for a healthy, confident smile.</p>
       </div>
+
       <div class="footer-socials">
         <h4>Follow Us</h4>
         <div class="social-icons">
@@ -130,6 +116,5 @@
     </div>
     <p class="footer-bottom">© 2025 Dental+. All Rights Reserved.</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
