btn has been changed learn more to Login. And I fixed logo in login.html

--- a/Login/login.html
+++ b/Login/login.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="dentist.gif" alt="Logo">
+        <img src="src/dentist.gif" alt="Logo">
         <h2>Dental<span>+</span></h2>
       </div>
 
