--- a/homepage/index.html
+++ b/homepage/index.html
@@ -16,7 +16,7 @@
         <h2>Dental<span>+</span></h2>
       </div>
       <ul class="nav-links">
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact Us</a></li>
@@ -33,7 +33,7 @@
     <div class="hero-content">
       <h1>Book your<br>Appointment now!</h1>
       <p>Our dental clinic offers services to help you become<br>confident in your smile.</p>
-      <a href="#" class="btn learn-btn">Learn more</a>
+  <a href="Login\login.html" class="btn login-btn">LOG IN</a>
 
       <div class="socials">
         <div class="icons">
