I add hyperlink connection in all functional form yet.

--- a/Login/login.html
+++ b/Login/login.html
@@ -23,7 +23,7 @@
       </div>
 
       <ul class="nav-links" id="nav-links">
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="/homepage/index.html" class="active">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact Us</a></li>
@@ -48,7 +48,7 @@
         <button type="submit">SIGN IN</button>
 
         <p class="signup-text">
-          Don't have an account? <a href="#">SIGN UP</a>
+          Don't have an account? <a href="/signup/signup.html">SIGN UP</a>
         </p>
 
         <div class="divider">
