Responsive Nav bar working progress

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -9,24 +9,33 @@
 </head>
 <body>
   <!-- Navbar -->
-  <header>
-    <nav class="navbar">
-      <div class="logo">
-        <img src="src/dentist.gif" alt="Logo">
-        <h2>Dental<span>+</span></h2>
-      </div>
-      <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul>
-      <div class="nav-right">
-        <a href="tel:+1234567891" class="phone"><i class="fa-solid fa-phone"></i> 1234-567-891</a>
-        <a href="#" class="btn">Book Appointment</a>
-      </div>
-    </nav>
-  </header>
+<header>
+  <nav class="navbar">
+    <div class="logo">
+      <img src="src/dentist.gif" alt="Logo">
+      <h2>Dental<span>+</span></h2>
+    </div>
+    <!-- Hamburger Button -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+
+
+    <div class="nav-right">
+      <a href="tel:+1234567891" class="phone"><i class="fa-solid fa-phone"></i> 1234-567-891</a>
+      <a href="#" class="btn">Book Appointment</a>
+    </div>
+  </nav>
+</header>
+
 
   <!-- Hero Section -->
   <section class="hero">
@@ -116,5 +125,6 @@
     </div>
     <p class="footer-bottom">© 2025 Dental+. All Rights Reserved.</p>
   </footer>
+<script src="script.js"></script>
 </body>
 </html>
