Connection of links btn fixing and taking notes for the activity next week.

--- a/Login/login.html
+++ b/Login/login.html
@@ -48,7 +48,7 @@
         <button type="submit">SIGN IN</button>
 
         <p class="signup-text">
-          Don't have an account? <a href="/signup/signup.html">SIGN UP</a>
+          Don't have an account? <a href="\Project in IS104\signup\signup.html">SIGN UP</a>
         </p>
 
         <div class="divider">
