--- a/homepage/index.html
+++ b/homepage/index.html
@@ -42,7 +42,7 @@
     <div class="hero-content">
       <h1>Book your<br>Appointment now!</h1>
       <p>Our dental clinic offers services to help you become<br>confident in your smile.</p>
-  <a href="/Login/login.html" class="btn login-btn">LOG IN</a>
+  <a href="\Project in IS104\Login\login.html" class="btn login-btn">LOG IN</a>
 
       <div class="socials">
         <div class="icons">
