--- a/signup/index.html
+++ b/signup/index.html
@@ -149,6 +149,7 @@
         <p class="signin-link">Already have an account? <a href="#">SIGN IN</a></p>
       </form>
     </section>
+    <script src="script.js"></script>
   </main>
 </body>
 </html>
