fixed the path of nav bar

--- a/Login/login.html
+++ b/Login/login.html
@@ -85,5 +85,6 @@
     <p class="footer-bottom">© 2025 Dental+. All Rights Reserved.</p>
   </footer>
 <script src="loginscript.js"></script>
+<script src="logindb.js"></script>
 </body>
 </html>
