--- a/homepage/index.html
+++ b/homepage/index.html
@@ -33,7 +33,7 @@
         <a href="tel:+1234567891" class="phone">
           <i class="fa-solid fa-phone"></i> 1234-567-891
         </a>
-        <a href="#" class="btnbookapp">Book Appointment</a>
+        <a href="#" class="btn">Book Appointment</a>
       </div>
     </nav>
   </header>
@@ -43,7 +43,7 @@
     <div class="hero-content">
       <h1>Book your<br>Appointment now!</h1>
       <p>Our dental clinic offers services to help you become<br>confident in your smile.</p>
-      <a href="\Project in IS104\Login\login.html" class="login-btn">LOG IN</a>
+      <a href="\Project in IS104\Login\login.html" class="btn login-btn">LOG IN</a>
 
       <div class="socials">
         <div class="icons">
@@ -126,6 +126,5 @@
     <p class="footer-bottom">© 2025 Dental+. All Rights Reserved.</p>
   </footer>
 
-  <script src="script.js"></script>
-</body>
+<script src="script.js" defer></script></body>
 </html>
