--- a/signup/signup.html
+++ b/signup/signup.html
@@ -5,150 +5,107 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dental+ Sign Up</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/a2d9d5a64c.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
-    <div class="logo">
-      <img src="https://i.ibb.co/0j3FxKj/tooth.png" alt="Dental+" />
-      <span>Dental+</span>
-    </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Services</a>
-      <a href="#">Contact Us</a>
-      <span class="contact-number">📞 1234-567-891</span>
+    <nav class="navbar">
+      <div class="logo">
+        <img src="src/dentist.gif" alt="Logo">
+        <h2>Dental<span>+</span></h2>
+      </div>
+
+      <div class="menu-toggle" id="menu-toggle">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+
+      <ul class="nav-links" id="nav-links">
+        <li><a href="/homepage/index.html" class="active">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+
+      <div class="nav-right">
+        <a href="tel:+1234567891" class="phone">
+          <i class="fa-solid fa-phone"></i> 1234-567-891
+        </a>
+        <a href="#" class="btn">Book Appointment</a>
+      </div>
     </nav>
   </header>
 
   <main class="container">
     <section class="left-section">
-  <img src="appointment.jpg" alt="Dental Appointment" class="left-img" />
-  <div class="left-text">
-    <h2>Ready to Book Your Appointment?</h2>
-    <p>
-      Welcome to BrightSmile Dental Care. Join our community and discover a better way to care for your smile! Book appointments, get reminders, and access exclusive dental care tips all in one place.
-    </p>
-  </div>
-</section>
+      <img src="appointment.jpg" alt="Dental Appointment" class="left-img" />
+      <div class="left-text">
+        <h2>Ready to Book Your Appointment?</h2>
+        <p>
+          Welcome to BrightSmile Dental Care. Join our community and discover a better way to care for your smile! Book appointments, get reminders, and access exclusive dental care tips all in one place.
+        </p>
+      </div>
+    </section>
 
     <section class="form-section">
       <h2>Sign up</h2>
-      <form>
+      <form action="signup.php" method="POST">
         <div class="form-group">
-          <input type="text" placeholder="Enter your name" required />
-          <input type="text" placeholder="Enter your number" required />
+          <input type="text" name="name" placeholder="Enter your name" required />
+          <input type="text" name="number" placeholder="Enter your number" required />
         </div>
+
         <div class="form-group">
-          <input type="email" placeholder="Enter your email" required />
-          <input type="text" placeholder="Enter your emergency contact" required />
+          <input type="email" name="email" placeholder="Enter your email" required />
+          <input type="text" name="emergency" placeholder="Enter your emergency contact" required />
         </div>
+
         <div class="form-group">
-          <input type="text" placeholder="Enter your username" required />
-          <input type="password" placeholder="Enter your password" required />
+          <input type="text" name="username" placeholder="Enter your username" required />
+          <input type="password" name="password" placeholder="Enter your password" required />
         </div>
+
         <div class="form-group dob-gender">
           <label>Date of Birth:</label>
-          <select>
-            <option>Month</option>
-            <option>January</option>
-            <option>February</option>
-            <option>March</option>
-            <option>April</option>
-            <option>May</option>
-            <option>June</option>
-            <option>July</option>
-            <option>August</option>
-            <option>September</option>
-            <option>October</option>
-            <option>November</option>
-            <option>December</option>
+          <select name="month" required>
+            <option value="">Month</option>
+            <option>January</option><option>February</option><option>March</option>
+            <option>April</option><option>May</option><option>June</option>
+            <option>July</option><option>August</option><option>September</option>
+            <option>October</option><option>November</option><option>December</option>
           </select>
-          <select>
-            <option>Day</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
-            <option>7</option>
-            <option>8</option>
-            <option>9</option>
-            <option>10</option>
-            <option>11</option>
-            <option>12</option>
-            <option>13</option>
-            <option>14</option>
-            <option>15</option>
-            <option>16</option>
-            <option>17</option>
-            <option>18</option>
-            <option>19</option>
-            <option>20</option>
-            <option>21</option>
-            <option>22</option>
-            <option>23</option>
-            <option>24</option>
-            <option>25</option>
-            <option>26</option>
-            <option>27</option>
-            <option>28</option>
-            <option>29</option>
-            <option>30</option>
-            <option>31</option>
+
+          <select name="day" required>
+            <option value="">Day</option>
+            <!-- Days 1–31 -->
+            <script>
+              for (let d = 1; d <= 31; d++) {
+                document.write(`<option>${d}</option>`);
+              }
+            </script>
           </select>
-          <select>
-           <option>Year</option><option>2025</option><option>2024</option><option>2023</option><option>2022</option><option>2021</option><option>2020</option><option>2019</option><option>2018</option><option>2017</option> <option>2016</option>
-            <option>2015</option>
-            <option>2014</option>
-            <option>2013</option>
-            <option>2012</option>
-            <option>2011</option>
-            <option>2010</option>
-            <option>2009</option>
-            <option>2008</option>
-            <option>2007</option>
-            <option>2006</option>
-            <option>2005</option>
-            <option>2004</option>
-            <option>2003</option>
-            <option>2002</option>
-            <option>2001</option>
-            <option>2000</option>
-            <option>1999</option>
-            <option>1998</option>
-            <option>1997</option>
-            <option>1996</option>
-            <option>1995</option>
-            <option>1994</option>
-            <option>1993</option>
-            <option>1992</option>
-            <option>1991</option>
-            <option>1990</option>
-            <option>1989</option>
-            <option>1988</option>
-            <option>1987</option>
-            <option>1986</option>
-            <option>1985</option>
-            <option>1984</option>
-            <option>1983</option>
-            <option>1982</option>
-            <option>1981</option>
-            <option>1980</option>
+
+          <select name="year" required>
+            <option value="">Year</option>
+            <script>
+              for (let y = 2025; y >= 1980; y--) {
+                document.write(`<option>${y}</option>`);
+              }
+            </script>
           </select>
         </div>
 
         <div class="gender">
           <label>Gender:</label>
-          <label><input type="radio" name="gender" /> Male</label>
-          <label><input type="radio" name="gender" /> Female</label>
+          <label><input type="radio" name="gender" value="Male" required /> Male</label>
+          <label><input type="radio" name="gender" value="Female" required /> Female</label>
         </div>
 
-        <button type="submit" class="signup-btn">SIGN UP</button>
-        <p class="signin-link">Already have an account? <a href="#">SIGN IN</a></p>
+        <button type="submit" name="signup" class="signup-btn">SIGN UP</button>
+        <p class="signin-link">Already have   an account? <a href="#">SIGN IN</a></p>
       </form>
     </section>
   </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
