Login & Sign up is working

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -101,7 +101,7 @@
         </div>
 
         <button type="submit" name="signup" class="signup-btn">SIGN UP</button>
-        <p class="signin-link">Already have   an account? <a href="#">SIGN IN</a></p>
+        <p class="signin-link">Already have   an account? <a href="\Project in IS104\Login\login.html">SIGN IN</a></p>
       </form>
     </section>
   </main>
