--- a/Login/login.html
+++ b/Login/login.html
@@ -42,27 +42,28 @@
   <main class="background">
     <div class="login-box">
       <h2>LOGIN</h2>
-      <form>
-        <input type="text" placeholder="Username" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">SIGN IN</button>
+      <form action="login.php" method="POST">
+  <input type="text" name="username" placeholder="Username" required>
+  <input type="password" name="password" placeholder="Password" required>
+  <button type="submit" name="login">SIGN IN</button>
 
-        <p class="signup-text">
-          Don't have an account? <a href="\Project in IS104\signup\signup.html">SIGN UP</a>
-        </p>
+  <p class="signup-text">
+    Don't have an account? <a href="\Project in IS104\signup\signup.html">SIGN UP</a>
+  </p>
 
-        <div class="divider">
-          <span>OR</span>
-        </div>
+  <div class="divider">
+    <span>OR</span>
+  </div>
 
-        <div class="social-login">
-          <p>Sign in with</p>
-          <div class="icons">
-            <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
-            <img src="https://cdn-icons-png.flaticon.com/512/300/300221.png" alt="Google">
-          </div>
-        </div>
-      </form>
+  <div class="social-login">
+    <p>Sign in with</p>
+    <div class="icons">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
+      <img src="https://cdn-icons-png.flaticon.com/512/300/300221.png" alt="Google">
+    </div>
+  </div>
+</form>
+
     </div>
   </main>
 
