--- a/homepage/index.html
+++ b/homepage/index.html
@@ -105,7 +105,28 @@
       </div>
     </div>
   </section>
+<!-- ===== AI Chatbot Widget ===== -->
+<div class="chatbot-wrapper">
+  <div class="chatbot-icon" id="chatbot-toggle">
+    <i class="fa-solid fa-comment-dots"></i>
+  </div>
 
+  <div class="chatbot-box" id="chatbot-box">
+    <div class="chatbot-header">
+      <h3>🤖 AI Assistant</h3>
+      <button id="close-chat">&times;</button>
+    </div>
+
+    <div class="chatbot-messages" id="chatbot-messages">
+      <div class="bot-message">Hi! I'm your Dental+ assistant. How can I help you today?</div>
+    </div>
+
+    <div class="chatbot-input">
+      <input type="text" id="chatbot-input" placeholder="Type your message..." />
+      <button id="chatbot-send">Send</button>
+    </div>
+  </div>
+</div>
   <!-- ===== Footer ===== -->
   <footer>
     <div class="footer-container">
