I add a voice dictate feature in ai chatbot.

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -124,6 +124,8 @@
     <div class="chatbot-input">
       <input type="text" id="chatbot-input" placeholder="Type your message..." />
       <button id="chatbot-send">Send</button>
+      <button id="chatbot-voice" title="Speak"><i class="fa-solid fa-microphone"></i></button>
+
     </div>
   </div>
 </div>
