connection link of each nav  bar _Carter

--- a/About Us/AboutUs.html
+++ b/About Us/AboutUs.html
@@ -23,10 +23,10 @@
       </div>
 
       <ul class="nav-links" id="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#"class="active">About Us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="/Project in IS104/homepage/index.html">Home</a></li>
+        <li><a href="/Project in IS104/About Us/AboutUs.html"class="active">About Us</a></li>
+        <li><a href="/Project in IS104/Services/services.html">Services</a></li>
+        <li><a href="">Contact Us</a></li>
       </ul>
 
       <div class="nav-right">
