--- a/homepage/index.html
+++ b/homepage/index.html
@@ -24,9 +24,9 @@
 
       <ul class="nav-links" id="nav-links">
         <li><a href="/homepage/index.html" class="active">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="/Project in IS104/About Us/AboutUs.html">About Us</a></li>
+        <li><a href="/Project in IS104/Services/services.html">Services</a></li>
+        <li><a href="">Contact Us</a></li>
       </ul>
 
       <div class="nav-right">
