Fetch database in admin webpage.

--- a/Login/login.html
+++ b/Login/login.html
@@ -26,7 +26,7 @@
         <li><a href="/Project in IS104/homepage/index.html" class="active">Home</a></li>
         <li><a href="/Project in IS104/About Us/AboutUs.html">About Us</a></li>
         <li><a href="/Project in IS104/Services/services.html">Services</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="/Project in IS104/contactus/contact.html">Contact Us</a></li>
       </ul>
 
       <div class="nav-right">
