Contact.php link in all webpages

--- a/About Us/AboutUs.html
+++ b/About Us/AboutUs.html
@@ -22,11 +22,11 @@
         <i class="fa-solid fa-bars"></i>
       </div>
 
-      <ul class="nav-links" id="nav-links">
-        <li><a href="/Project in IS104/homepage/index.html">Home</a></li>
-        <li><a href="/Project in IS104/About Us/AboutUs.html"class="active">About Us</a></li>
+        <ul class="nav-links" id="nav-links">
+        <li><a href="/Project in IS104/homepage/index.html" class="active">Home</a></li>
+        <li><a href="/Project in IS104/About Us/AboutUs.html">About Us</a></li>
         <li><a href="/Project in IS104/Services/services.html">Services</a></li>
-        <li><a href="">Contact Us</a></li>
+        <li><a href="/Project in IS104/contactUs/contact.php">Contact Us</a></li>
       </ul>
 
       <div class="nav-right">
