--- a/homepage/index.html
+++ b/homepage/index.html
@@ -23,10 +23,10 @@
       </div>
 
       <ul class="nav-links" id="nav-links">
-        <li><a href="/homepage/index.html" class="active">Home</a></li>
+        <li><a href="/Project in IS104/homepage/index.html" class="active">Home</a></li>
         <li><a href="/Project in IS104/About Us/AboutUs.html">About Us</a></li>
         <li><a href="/Project in IS104/Services/services.html">Services</a></li>
-        <li><a href="">Contact Us</a></li>
+        <li><a href="/Project in IS104/contactUs/contact.php">Contact Us</a></li>
       </ul>
 
       <div class="nav-right">
