--- a/About Us/AboutUs.html
+++ b/About Us/AboutUs.html
@@ -23,8 +23,8 @@
       </div>
 
         <ul class="nav-links" id="nav-links">
-        <li><a href="/Project in IS104/homepage/index.html" class="active">Home</a></li>
-        <li><a href="/Project in IS104/About Us/AboutUs.html">About Us</a></li>
+        <li><a href="/Project in IS104/homepage/index.html">Home</a></li>
+        <li><a href="/Project in IS104/About Us/AboutUs.html"class="active">About Us</a></li>
         <li><a href="/Project in IS104/Services/services.html">Services</a></li>
         <li><a href="/Project in IS104/contactUs/contact.php">Contact Us</a></li>
       </ul>
