I fixed burger nav menu for the responsive features. -carter

--- a/Services/services.html
+++ b/Services/services.html
@@ -186,11 +186,11 @@
           <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
       </div>
-    </div>
+    </div>  
     <p class="footer-bottom">© 2025 Dental+. All Rights Reserved.</p>
   </footer>
     
-    <script src="script.js"></script>
+    <script src="scriptservice.js"></script>
 
 </body>
 </html>
