--- a/homepage/index.html
+++ b/homepage/index.html
@@ -111,23 +111,31 @@
     <i class="fa-solid fa-comment-dots"></i>
   </div>
 
-  <div class="chatbot-box" id="chatbot-box">
-    <div class="chatbot-header">
-      <h3>🤖 AI Assistant</h3>
-      <button id="close-chat">&times;</button>
-    </div>
-
-    <div class="chatbot-messages" id="chatbot-messages">
-      <div class="bot-message">Hi! I'm your Dental+ assistant. How can I help you today?</div>
-    </div>
-
-    <div class="chatbot-input">
-      <input type="text" id="chatbot-input" placeholder="Type your message..." />
-      <button id="chatbot-send">Send</button>
-      <button id="chatbot-voice" title="Speak"><i class="fa-solid fa-microphone"></i></button>
-
-    </div>
+ <div class="chatbot-box" id="chatbot-box">
+  <div class="chatbot-header">
+    <h3>🤖 AI Assistant</h3>
+    <button id="close-chat">&times;</button>
   </div>
+
+  <!-- Suggested Questions -->
+  <div id="chatbot-suggestions">
+    <button class="suggest-btn">Toothache remedies</button>
+    <button class="suggest-btn">Dental cleaning price</button>
+    <button class="suggest-btn">Clinic operating hours</button>
+    <button class="suggest-btn">How to book appointment?</button>
+  </div>
+
+  <div class="chatbot-messages" id="chatbot-messages">
+    <div class="bot-message">Hi! I'm your Dental+ assistant. How can I help you today?</div>
+  </div>
+
+  <div class="chatbot-input">
+    <input type="text" id="chatbot-input" placeholder="Type your message..." />
+    <button id="chatbot-send">Send</button>
+    <button id="chatbot-voice" title="Speak"><i class="fa-solid fa-microphone"></i></button>
+  </div>
+</div>
+
 </div>
   <!-- ===== Footer ===== -->
   <footer>
